[package]
name = "scroll"
version = "0.1.0"
edition = "2021"
authors = ["Geir Isene <g@isene.com>"]
description = "Terminal web browser with vim keybindings. Feature clone of brrowser."
license = "Unlicense"
repository = "https://github.com/isene/scroll"

[dependencies]
crust = { version = "0.1", path = "../crust", package = "fe2o3-crust" }
glow = { version = "0.1", path = "../glow", package = "fe2o3-glow" }
libc = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ureq = { version = "2", features = ["tls"] }
scraper = "0.22"
url = "2"
