[package]
name = "scroll"
version = "0.2.1"
edition = "2021"
authors = ["Geir Isene <g@isene.com>"]
description = "Terminal web browser with vim keybindings. Feature clone of brrowser."
license = "Unlicense"
repository = "https://github.com/isene/scroll"

[dependencies]
crust = { version = "0.1", path = "../crust", package = "fe2o3-crust" }
glow = { version = "0.1", path = "../glow", package = "fe2o3-glow" }
libc = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ureq = { version = "2", features = ["tls"] }
scraper = "0.22"
url = "2"
# rusqlite (bundled libsqlite3) lets scroll import cookies from
# Firefox profiles without depending on the system sqlite version.
# Used for per-set identity import (Phase 1 of the JS path).
rusqlite = { version = "0.31", features = ["bundled"] }
# Pure-Rust JavaScript engine. Used to execute inline <script> tags
# against a minimal DOM/window stub so simple JS-driven login forms,
# fetch-based POSTs, and `window.location` redirects work inside
# scroll. No native deps; ~5 MB compiled-in.
boa_engine = "0.20"
