[package]
name = "scroll"
version = "0.3.5"
edition = "2021"
authors = ["Geir Isene <g@isene.com>"]
description = "Terminal web browser with vim keybindings. Feature clone of brrowser."
license = "Unlicense"
repository = "https://github.com/isene/scroll"

[dependencies]
crust = { version = "0.1", path = "../crust", package = "fe2o3-crust" }
glow = { version = "0.1", path = "../glow", package = "fe2o3-glow" }
libc = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# rquest replaces ureq: it ships canned TLS / HTTP-2 fingerprint
# profiles that match real Firefox builds, which is the only way to
# get past Cloudflare's `cf_clearance` cookie binding (the cookie is
# tied to the JA3 hash of the connection that obtained it). Pulls in
# BoringSSL via the `boring` crate, so cmake + go must be present at
# build time. Async-only, so we drive it from a current-thread tokio
# runtime parked inside `Fetcher`.
rquest = "5"
rquest-util = { version = "2", features = ["full"] }
tokio = { version = "1", features = ["rt"] }
scraper = "0.22"
url = "2"
# rusqlite (bundled libsqlite3) lets scroll import cookies from
# Firefox profiles without depending on the system sqlite version.
# Used for per-set identity import (Phase 1 of the JS path).
rusqlite = { version = "0.31", features = ["bundled"] }
# Pure-Rust JavaScript engine. Used to execute inline <script> tags
# against a minimal DOM/window stub so simple JS-driven login forms,
# fetch-based POSTs, and `window.location` redirects work inside
# scroll. No native deps; ~5 MB compiled-in.
boa_engine = "0.20"
# Used to strip CSS-hidden elements (display:none / visibility:hidden /
# opacity:0 / max-height:0 / max-width:0) from email HTML before
# rendering — newsletters stuff "preview-text" into these so a Gmail
# inbox listing can show a blurb. Without the strip, the preview text
# gets rendered AS WELL AS the actual headline, producing duplicate
# sections in the rendered output.
regex = "1"
